fixed overflow issue in projects-container

--- a/public/style.css
+++ b/public/style.css
@@ -20,7 +20,6 @@
 html {
   scroll-behavior: smooth;
   font-size: 1rem;
-  overflow-x: hidden;
 }
 
 body {
@@ -75,8 +74,6 @@ a {
   left: 0;
   width: 100%;
   z-index: 10;
-
-  overflow-x: hidden;
   box-sizing: border-box;
 }
 
@@ -142,7 +139,7 @@ a {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(12, 1fr);
   grid-gap: 1rem;
-  width: 100%;
+  overflow-y: hidden;
 }
 
 .project {
